--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
+html {
+  scroll-behavior: smooth;
+}
 @media (prefers-color-scheme: light) {
+  a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: none;
+  }
+  
+  a:active {
+    text-decoration: none;
+  }
   .popup-inner{
     background: #fff;
   }
@@ -24,11 +42,11 @@
         
 
     }
-    .navbar :hover{
+    ul :hover{
         color:#3651DD;
      
      }
-     .navbar{
+     ul{
         color:#95959A;
      }
      .but2{
@@ -58,6 +76,21 @@
 }
 
 @media (prefers-color-scheme: dark) {
+  a:link {
+    text-decoration: none;
+  }
+  
+  a:visited {
+    text-decoration: none;
+  }
+  
+  a:hover {
+    text-decoration: none;
+  }
+  
+  a:active {
+    text-decoration: none;
+  }
   .popup-inner{
     background:  #404040;
   }
@@ -120,11 +153,11 @@
    
     background-color: #131212;
 }
-.navbar :hover{
+ul :hover{
     color: #95959A;
  
  }
-.navbar {
+ul {
      color:#ffffff;
      }
  
@@ -156,8 +189,9 @@
     padding-left: 10%;
     
 }
-.navbar {
-   letter-spacing: 2px;
+
+ul{
+    letter-spacing: 2px;
     text-align: right;
     float: right; 
     text-decoration: none;
@@ -167,13 +201,17 @@
     
     .positionlogo:hover {
         transform: scale(1.1);
+        
     }
 
 
 li{
    display: inline-block;
    padding-left:44px;
+  
 }
+
+
 .but{
     background: #4261FF;
     border-radius: 10px;
