--- a/style.css
+++ b/style.css
@@ -336,15 +336,19 @@ footer {
     font-family: 'Merriweather', serif;
     src: url('Merriweather-Bold.ttf');
     padding-top: 20px;
+    font-size: 50px;
    
   
 }
 
 .card1{
-    padding: 20px;
-    padding-top: 150px;
+    
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 100%;
-    height: 250px;
+
     margin-bottom: 16px;
     margin-top: 16px;
   
@@ -485,12 +489,12 @@ footer {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
   }
-  
+
   .popup-close:after {
     -webkit-transform: rotate(-45deg);
     transform: rotate(-45deg);
   }
-  
+
   .popup-close:hover {
     -webkit-transform: translate(50%, -50%) rotate(180deg);
     transform: translate(50%, -50%) rotate(180deg);
@@ -503,8 +507,9 @@ footer {
   .popup-close:hover:before {
     background: #fff;
   }
+
+
   .contentform{
-    
     height: 100%;
     width: 95%;
     padding: 30px;
@@ -512,10 +517,7 @@ footer {
     margin: auto;
     justify-content: center;
     align-content: center;
-    border-radius: 6px;
-   
-    
-    
+    border-radius: 6px;  
   }
   .but3{
     background: #4261FF;
@@ -538,3 +540,12 @@ footer {
 .textwo {
   font-size: 22px;
 }
+.paddingimg2{
+  padding:30px;
+}
+@media (min-width: 376px) and (max-width: 1040px) { 
+
+  .wrapone{
+    visibility: hidden;
+  }
+ }
