--- a/style.css
+++ b/style.css
@@ -343,12 +343,14 @@ footer {
 
 .card1{
     
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 30px;
+    padding-bottom: 10px;
     width: 100%;
-
+ text-align: center;
+ justify-content: center;
+ align-content: center;
     margin-bottom: 16px;
     margin-top: 16px;
   
@@ -363,7 +365,7 @@ footer {
     opacity: 1;
     border: none;
     padding: 10px;
-    width: 90px;
+    width: 100%;
     color: #FFFFFF;
     text-align: center;
     display: flex;
