--- a/style.css
+++ b/style.css
@@ -555,7 +555,16 @@ footer {
   }
  }
  
- 
+ .zoom {
+  
+  transition: transform .2s; /* Animation */
+  
+}
+
+.zoom:hover {
+  transform: scale(1.5)
+}
+
 
 
 
